--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -237,6 +237,22 @@
   text-transform: uppercase;
   letter-spacing: 0.15rem;
 }
+/* green box on hover */
+.zoom {
+padding: 50px;
+/* background-color: green; */
+transition: transform 1s; /* Animation */
+width: 200px;
+height: 200px;
+margin: 0 auto;
+}
+
+.zoom:hover {
+transform: scale(1.3); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
+
+
+
 
 .contact-section .card hr {
   border-color: #64a19d;
