--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 body{
-  background:#92bde7;
+  background:#000000;
   color:#485e74;
   line-height:1.6;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
