--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -29,12 +29,12 @@
 #mainNav .navbar-nav .nav-item:hover {
   color: fade(white, 80%);
   outline: none;
-  background-color: transparent;
+  /* background-color: transparent; */
 }
 
 #mainNav .navbar-nav .nav-item:active, #mainNav .navbar-nav .nav-item:focus {
   outline: none;
-  background-color: transparent;
+  /* background-color: transparent; */
 }
 
 @media (min-width: 992px) {
@@ -42,12 +42,12 @@
     padding-top: 0;
     padding-bottom: 0;
     border-bottom: none;
-    background-color: transparent;
-    transition: background-color 0.3s ease-in-out;
+    /* background-color: transparent; */
+    /* transition: background-color 0.3s ease-in-out; */
   }
   #mainNav .navbar-brand {
     padding: .5rem 0;
-    color: rgba(255, 255, 255, 0.5);
+    color: #161616;
   }
   #mainNav .nav-link {
     transition: none;
@@ -69,7 +69,7 @@
   #mainNav.navbar-shrink .nav-link {
     color: #161616;
     padding: 1.5rem 1.5rem 1.25rem;
-    border-bottom: 0.25rem solid transparent;
+    /* border-bottom: 0.25rem solid transparent; */
   }
   #mainNav.navbar-shrink .nav-link:hover {
     color: #64a19d;
@@ -90,7 +90,7 @@
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%), url("../img/bg-masthead.jpg");
+  /* background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%), url("../img/bg-masthead.jpg"); */
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -121,7 +121,7 @@
 
 @media (min-width: 992px) {
   .masthead {
-    height: 100vh;
+    height: 200vh;
     padding: 0;
   }
   .masthead h1 {
@@ -204,7 +204,7 @@
 
 .signup-section {
   padding: 15rem 0;
-  background: linear-gradient(to bottom, rgba(10, 10, 10, 0.1) 0%, rgba(10, 10, 10, 0.5) 50%, #161616 80%), url("../img/Mountain-Wireframe_42.png");
+  background: linear-gradient(to bottom, rgba(10, 10, 10, 0.1) 0%, rgba(10, 10, 10, 0.5) 50%, #161616 80%), url("../img/footer2.png");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
